[gd_scene load_steps=34 format=3 uid="uid://c1soqfi8e6x46"]

[ext_resource type="Texture2D" uid="uid://c5k8gcbv3uprk" path="res://Assets/nubes.png" id="1_52fb6"]
[ext_resource type="Material" uid="uid://dxfihkrqs1ael" path="res://Shaders/darken_shader_res.tres" id="2_6l7je"]
[ext_resource type="Texture2D" uid="uid://c4cal3fad0sd8" path="res://Assets/pobo.png" id="2_jv6wh"]
[ext_resource type="Script" uid="uid://bcobfpde7uoba" path="res://Scripts/boat.gd" id="4_huasi"]
[ext_resource type="Material" uid="uid://comsnh3ahrisy" path="res://Shaders/light_shader_res.tres" id="4_iacmt"]
[ext_resource type="Texture2D" uid="uid://wj1kjc43iw4e" path="res://icon.svg" id="4_maf8m"]
[ext_resource type="Texture2D" uid="uid://bntp3k844t2ed" path="res://Assets/luzpobo.png" id="4_x6ack"]
[ext_resource type="Script" uid="uid://c3f003t36lobj" path="res://Scripts/fishing_zone.gd" id="5_76v2p"]
[ext_resource type="Texture2D" uid="uid://cb68nuqbp6wjo" path="res://Assets/poboreflexo.png" id="5_m1efj"]
[ext_resource type="Texture2D" uid="uid://cu3xd7mekbme" path="res://Assets/burbullas.png" id="5_mai8y"]
[ext_resource type="PackedScene" uid="uid://cth1pfbi6i071" path="res://Scenes/fishing_game.tscn" id="6_6ev3c"]
[ext_resource type="Texture2D" uid="uid://cj24j201s7bk5" path="res://Assets/exclamation.png" id="7_drdnd"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_huasi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_maf8m"]
size = Vector2(6, 10)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_huasi"]
b = Vector2(431, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_m1efj"]
b = Vector2(0, 241)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mai8y"]
b = Vector2(0, 241)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_76v2p"]
b = Vector2(432, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_mai8y"]
atlas = ExtResource("5_mai8y")
region = Rect2(0, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_76v2p"]
atlas = ExtResource("5_mai8y")
region = Rect2(16, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_drdnd"]
atlas = ExtResource("5_mai8y")
region = Rect2(32, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioaeq"]
atlas = ExtResource("5_mai8y")
region = Rect2(48, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ewk0"]
atlas = ExtResource("5_mai8y")
region = Rect2(64, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhp3t"]
atlas = ExtResource("5_mai8y")
region = Rect2(80, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnsmo"]
atlas = ExtResource("5_mai8y")
region = Rect2(96, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_psl12"]
atlas = ExtResource("5_mai8y")
region = Rect2(112, 0, 16, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_oyb3p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mai8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76v2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drdnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioaeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ewk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhp3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnsmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psl12")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mai8y"]
radius = 10.6667

[sub_resource type="AtlasTexture" id="AtlasTexture_2ebs2"]
atlas = ExtResource("7_drdnd")
region = Rect2(1, 1, 3, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyb3p"]
atlas = ExtResource("7_drdnd")
region = Rect2(7, 1, 3, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvnna"]
atlas = ExtResource("7_drdnd")
region = Rect2(13, 1, 3, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_b48ew"]
atlas = ExtResource("7_drdnd")
region = Rect2(19, 1, 3, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_8edxt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ebs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyb3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvnna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b48ew")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainScene" type="Node2D"]

[node name="World" type="Node2D" parent="."]

[node name="Background" type="Node2D" parent="World"]

[node name="Clouds" type="Sprite2D" parent="World/Background"]
texture = ExtResource("1_52fb6")
centered = false

[node name="PlayZone" type="Node2D" parent="World"]
y_sort_enabled = true
position = Vector2(-3, 0)

[node name="Town" type="StaticBody2D" parent="World/PlayZone"]
y_sort_enabled = true
position = Vector2(2, 0)
physics_material_override = SubResource("PhysicsMaterial_huasi")
metadata/_edit_group_ = true

[node name="TownSprite" type="Sprite2D" parent="World/PlayZone/Town"]
position = Vector2(83, 158)
texture = ExtResource("2_jv6wh")
offset = Vector2(0, -6.725)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="World/PlayZone/Town"]
visible = false
z_index = 1
position = Vector2(10, 97)
polygon = PackedVector2Array(-9, -1, 58, 36, 125, 56, 143, 64, 144, 80, 118, 89, 105, 97, 77, 109, 34, 119, 14, 113, -10, 116)

[node name="Boat" type="CharacterBody2D" parent="World/PlayZone"]
y_sort_enabled = true
position = Vector2(138, 144)
script = ExtResource("4_huasi")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="World/PlayZone/Boat"]
position = Vector2(-1, 0.0080719)
scale = Vector2(0.046875, 0.078251)
texture = ExtResource("4_maf8m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PlayZone/Boat"]
position = Vector2(-1, 1.52588e-05)
shape = SubResource("RectangleShape2D_maf8m")

[node name="Camera2D" type="Camera2D" parent="World/PlayZone/Boat"]
zoom = Vector2(1.665, 1.665)
limit_left = 0
limit_top = 0
limit_right = 426
limit_bottom = 240
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 0.42
drag_vertical_offset = -0.73
drag_left_margin = 0.45
drag_top_margin = 0.26
drag_bottom_margin = 0.45
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Limits" type="Node2D" parent="World/PlayZone"]

[node name="UpBorder" type="StaticBody2D" parent="World/PlayZone/Limits"]
position = Vector2(2, 110)

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PlayZone/Limits/UpBorder"]
shape = SubResource("SegmentShape2D_huasi")

[node name="DownBorder" type="StaticBody2D" parent="World/PlayZone/Limits"]
position = Vector2(2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PlayZone/Limits/DownBorder"]
shape = SubResource("SegmentShape2D_m1efj")

[node name="LeftBorder" type="StaticBody2D" parent="World/PlayZone/Limits"]
position = Vector2(430, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PlayZone/Limits/LeftBorder"]
shape = SubResource("SegmentShape2D_mai8y")

[node name="RightBorder" type="StaticBody2D" parent="World/PlayZone/Limits"]
position = Vector2(0, 240)

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PlayZone/Limits/RightBorder"]
shape = SubResource("SegmentShape2D_76v2p")

[node name="FishingZone" type="Area2D" parent="World/PlayZone"]
position = Vector2(332, 158)
scale = Vector2(0.75, 0.75)
script = ExtResource("5_76v2p")
fishing_scene = ExtResource("6_6ev3c")

[node name="Bubbles" type="AnimatedSprite2D" parent="World/PlayZone/FishingZone"]
z_index = -1
sprite_frames = SubResource("SpriteFrames_oyb3p")
autoplay = "default"
frame_progress = 0.502264

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PlayZone/FishingZone"]
shape = SubResource("CircleShape2D_mai8y")

[node name="Exclamation" type="AnimatedSprite2D" parent="World/PlayZone/FishingZone"]
visible = false
position = Vector2(0, -18.6667)
sprite_frames = SubResource("SpriteFrames_8edxt")
autoplay = "default"
frame_progress = 0.256759

[node name="Poboreflexo" type="Sprite2D" parent="World"]
z_index = -2
position = Vector2(141, 195)
texture = ExtResource("5_m1efj")

[node name="DarkLayer" type="CanvasLayer" parent="."]

[node name="Darkener" type="ColorRect" parent="DarkLayer"]
material = ExtResource("2_6l7je")
offset_right = 413.0
offset_bottom = 104.0
scale = Vector2(1.04, 2.32)

[node name="LightLayer" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="TownLights" type="Sprite2D" parent="LightLayer"]
y_sort_enabled = true
material = ExtResource("4_iacmt")
position = Vector2(82, 158)
texture = ExtResource("4_x6ack")
offset = Vector2(0, -6.725)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 3

[node name="FishingGame" parent="UILayer" instance=ExtResource("6_6ev3c")]
visible = false
offset_left = 131.0
offset_top = 72.0
offset_right = -197.0
offset_bottom = -158.0

[connection signal="body_entered" from="World/PlayZone/FishingZone" to="World/PlayZone/FishingZone" method="_on_body_entered"]
[connection signal="body_exited" from="World/PlayZone/FishingZone" to="World/PlayZone/FishingZone" method="_on_body_exited"]
